--- a/ordia/app/templates/guess-the-gender.html
+++ b/ordia/app/templates/guess-the-gender.html
@@ -4,7 +4,7 @@
 {{super()}}
 
 <script>
-        const SPARQL_ENDPOINT = 'https://query.wikidata.org/sparql';
+        const SPARQL_ENDPOINT = 'https://query-main.wikidata.org/sparql';
         const MAX_QUESTIONS = 10;
         let nouns = [];
         let currentQuestion = 0;
