--- a/ordia/app/templates/guess-word-from-image.html
+++ b/ordia/app/templates/guess-word-from-image.html
@@ -23,7 +23,7 @@
 {{super()}}
 
 <script>
-        const SPARQL_ENDPOINT = 'https://query.wikidata.org/sparql';
+        const SPARQL_ENDPOINT = 'https://query-main.wikidata.org/sparql';
         const MAX_QUESTIONS = 10;
         let dataItems = [];
         let currentQuestion = 0;
