--- a/ordia/app/templates/reference.html
+++ b/ordia/app/templates/reference.html
@@ -108,7 +108,7 @@ WHERE {
 <h2>Images</h2>
 
   <div class="embed-responsive embed-responsive-4by3">
-    <iframe loading="lazy" class="embed-responsive-item" src="https://query.wikidata.org/embed.html#%23defaultView%3AImageGrid%0ASELECT%20%0A%20%20%3Fimage%0A%20%20%3Flexeme%20%3FlexemeLabel%0A%20%20%3Fuse%0AWHERE%20%7B%0A%20%20%3Flexeme%20p%3AP5831%20%3Fuse_statement%20.%20%0A%20%20%3Flexeme%20wikibase%3Alemma%20%3FlexemeLabel%20.%0A%20%20%3Fuse_statement%20ps%3AP5831%20%3Fuse%20.%0A%20%20%3Fuse_statement%20pq%3AP6072%20%2F%20wdt%3AP5137%3F%20%2F%20wdt%3AP18%20%3Fimage%20.%0A%20%20%3Fuse_statement%20prov%3AwasDerivedFrom%20%2F%20pr%3AP248%20wd%3A{{ q }}%20.%0A%7D"></iframe>
+    <iframe loading="lazy" class="embed-responsive-item" src="https://query-main.wikidata.org/embed.html#%23defaultView%3AImageGrid%0ASELECT%20%0A%20%20%3Fimage%0A%20%20%3Flexeme%20%3FlexemeLabel%0A%20%20%3Fuse%0AWHERE%20%7B%0A%20%20%3Flexeme%20p%3AP5831%20%3Fuse_statement%20.%20%0A%20%20%3Flexeme%20wikibase%3Alemma%20%3FlexemeLabel%20.%0A%20%20%3Fuse_statement%20ps%3AP5831%20%3Fuse%20.%0A%20%20%3Fuse_statement%20pq%3AP6072%20%2F%20wdt%3AP5137%3F%20%2F%20wdt%3AP18%20%3Fimage%20.%0A%20%20%3Fuse_statement%20prov%3AwasDerivedFrom%20%2F%20pr%3AP248%20wd%3A{{ q }}%20.%0A%7D"></iframe>
   </div>
 
 <iframe style="width: 80vw; height: 50vh; border: none;" src="" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups" ></iframe>
