--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -25,7 +25,7 @@ WHERE {
     BIND("Language" AS ?description)
     ?lexeme dct:language ?value .
     ?value rdfs:label ?valueLabel .
-    FILTER (LANG(?valueLabel) = 'en')
+    FILTER (LANG(?valueLabel) = 'mul')
     BIND(CONCAT("language/", SUBSTR(STR(?value), 32))  AS ?value_Url)
   }
   UNION 
@@ -34,7 +34,7 @@ WHERE {
     BIND("Lexical category" AS ?description)
     ?lexeme wikibase:lexicalCategory ?value .
     ?value rdfs:label ?valueLabel .
-    FILTER (LANG(?valueLabel) = 'en')
+    FILTER (LANG(?valueLabel) = 'mul')
     BIND(CONCAT("lexical-category/", SUBSTR(STR(?value), 32))  AS ?value_Url)
   }
   UNION 
@@ -44,12 +44,12 @@ WHERE {
     ?lexeme p:P31 ?value_statement .
     ?value_statement ps:P31 ?value .
     ?value rdfs:label ?valueLabel .
-    FILTER (LANG(?valueLabel) = 'en')
+    FILTER (LANG(?valueLabel) = 'mul')
     BIND(CONCAT("property/P31/value/", SUBSTR(STR(?value), 32))  AS ?value_Url)
     OPTIONAL {
       ?value_statement prov:wasDerivedFrom / pr:P248 ?source_ .
       ?source_ rdfs:label ?source .
-      FILTER (LANG(?source) = 'en')
+      FILTER (LANG(?source) = 'mul')
       BIND(CONCAT("reference/", SUBSTR(STR(?source_), 32))  AS ?sourceUrl)
     }
   }
@@ -68,7 +68,7 @@ WHERE {
     BIND("Grammatical gender" AS ?description)
     ?lexeme wdt:P5185 ?value .
     ?value rdfs:label ?valueLabel .
-    FILTER (LANG(?valueLabel) = 'en')
+    FILTER (LANG(?valueLabel) = 'mul')
   }
   UNION 
   {
@@ -134,7 +134,7 @@ WHERE {
     ?lexeme ontolex:lexicalForm? / p:P1343 ?value_statement .
     ?value_statement ps:P1343 ?value .
     ?value rdfs:label ?valueLabel .
-    FILTER (LANG(?valueLabel) = 'en')
+    FILTER (LANG(?valueLabel) = 'mul')
     BIND(CONCAT("reference/", SUBSTR(STR(?value), 32))  AS ?value_Url)
     OPTIONAL {
       ?value_statement prov:wasDerivedFrom / pr:P854 ?sourceUrl .
@@ -290,7 +290,7 @@ WHERE {
   OPTIONAL {
     ?lexeme wikibase:lexicalCategory ?lexical_category .
     ?lexical_category rdfs:label ?lexical_categoryLabel .
-    FILTER (LANG(?lexical_categoryLabel) = 'en')
+    FILTER (LANG(?lexical_categoryLabel) = 'mul')
   }
 }
 `
