Fix #288 Add Breton

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -435,6 +435,7 @@
 	  <option value="Q33284">Bikol Sentral - bcl - Central Bikol</option>
 	  <option value="Q9091">беларуская мова - be - Belarusian</option>
 	  <option value="Q33151">Bahasa Banjar - bjn - Banjar</option>
+    <option value="Q12107">brezhoneg - br - Breton</option>
 	  <option value="Q7026">català - ca - Catalan</option>
 	  <option value="Q9056">čeština - cs - Czech</option>
 	  <option value="Q9035">dansk - da - Danish</option>
