--- a/ordia/app/templates/guess-form-from-text.html
+++ b/ordia/app/templates/guess-form-from-text.html
@@ -244,6 +244,7 @@
     <select class="form-control mb-3" id="language-selector">
       <option value="Q29919">اللغه المصريه الحديثه - arz - Egyptian Arabic</option>
       <option value="Q9610">বাংলা ভাষা - bn - Bangla</option>
+      <option value="Q12107">brezhoneg - br - Breton</option>
       <option value="Q9056">čeština - cs - Czech</option>
       <option value="Q9035">dansk - da - Danish</option>
       <option value="Q32238">Dagbanli - dag - Dagbani</option>
