--- a/ordia/app/templates/guess-word-from-image.html
+++ b/ordia/app/templates/guess-word-from-image.html
@@ -274,21 +274,22 @@
         <div id="language-selection" class="card p-4 mb-4">
             <label for="language-selector">Select Language:</label>
             <select class="form-control mb-3" id="language-selector">
-	      	<option value="Q9056">čeština - cs - Czech</option>
-                <option value="Q9035">Dansk - da - Danish</option>
-                <option value="Q32238">Dagbanli - dag - Dagbani</option>
-                <option value="Q188">Deutsch - de - German</option>
-		<option value="Q30005">Eʋegbe - ee - Ewe</option>
-		<option value="Q143">Esperanto - eo - Esperanto</option>
-                <option value="Q1321">Español - es - Spanish</option>
-                <option value="Q1860">English - en - English</option>
-		<option value="Q8752">euskara - eu - Basque</option>
-		<option value="Q9168">فارسی - fa - Persian</option>
-		<option value="Q33454">Fulfulde - ff - Fula</option>
-                <option value="Q150">Français - fr - French</option>
-		<option value="Q9240">bahasa Indonesia - id - Indonesian</option>
-		<option value="Q33578">Asụ̀sụ̀ Ìgbò - ig - Igbo</option>
-                <option value="Q652">Italiano - it - Italian</option>
+              <option value="Q12107">brezhoneg - br - Breton</option>
+	      	    <option value="Q9056">čeština - cs - Czech</option>
+              <option value="Q9035">Dansk - da - Danish</option>
+              <option value="Q32238">Dagbanli - dag - Dagbani</option>
+              <option value="Q188">Deutsch - de - German</option>
+	            <option value="Q30005">Eʋegbe - ee - Ewe</option>
+		          <option value="Q143">Esperanto - eo - Esperanto</option>
+              <option value="Q1321">Español - es - Spanish</option>
+              <option value="Q1860">English - en - English</option>
+	            <option value="Q8752">euskara - eu - Basque</option>
+	            <option value="Q9168">فارسی - fa - Persian</option>
+	            <option value="Q33454">Fulfulde - ff - Fula</option>
+              <option value="Q150">Français - fr - French</option>
+              <option value="Q9240">bahasa Indonesia - id - Indonesian</option>
+		          <option value="Q33578">Asụ̀sụ̀ Ìgbò - ig - Igbo</option>
+              <option value="Q652">Italiano - it - Italian</option>
 		<option value="Q5287">日本語 - ja - Japanese</option>
 		<option value="Q25355">Kalaallisut - kl - Greenlandic</option>
 		<option value="Q36236">മലയാളം - ml - Malayalam</option>
