Fix #297 endpoint change from query-main to query The endpoint used is changed from query-main to query - it is probably the same except for the name. Currently the Wikidata Query Service reports error 4xx or 5xx. Changing to query seems to have no effect.

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -82,7 +82,7 @@
                         ontolex:lexicalForm / wdt:P5279 ?syllable .
             } 
             `;
-            const url = 'https://query-main.wikidata.org/sparql?query=' + encodeURIComponent(query) + '&format=json';
+            const url = 'https://query.wikidata.org/sparql?query=' + encodeURIComponent(query) + '&format=json';
             const response = await fetch(url);
             const data = await response.json();
             processData(data.results.bindings);
